removes the tabs as the \fix\ overflows

--- a/components/vf-tabs/vf-tabs.scss
+++ b/components/vf-tabs/vf-tabs.scss
@@ -15,19 +15,29 @@ $vf-tabs__list--active-border--color: set-ui-color(vf-ui-color--white);
   padding: 0 0 0px 16px;
   position: relative;
 
-  @media (min-width: $vf-breakpoint--xl) {
-    &::before,
-    &::after {
-      border-bottom: 1px solid $vf-tabs__list-border--color;
-      bottom: -1px;
-      content: '';
-      height: 1px;
-      position: absolute;
-      transform: translateX(-50%);
-      width: 100vw;
-      z-index: 5150;
-    }
-  }
+  // @media (min-width: $vf-breakpoint--xl) {
+  //   &::before {
+  //     border-bottom: 1px solid $vf-tabs__list-border--color;
+  //     bottom: -1px;
+  //     content: '';
+  //     height: 1px;
+  //     position: absolute;
+  //     transform: translateX(-50%);
+  //     width: 100vw;
+  //     z-index: 5150;
+  //   }
+  //
+  //   &::after {
+  //     border-bottom: 1px solid $vf-tabs__list-border--color;
+  //     bottom: -1px;
+  //     content: '';
+  //     height: 1px;
+  //     position: absolute;
+  //     transform: translateX(-50%);
+  //     width: 100vw;
+  //     z-index: 5150;
+  //   }
+  // }
 }
 
 .vf-tabs__item,
